--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ aside {
     width:13.5vw;
     padding-bottom:0;
 }
-.cityHistoryBtn {
+button {
     background-color: #febddc; 
     color: white;
     height:40px;
@@ -99,3 +99,7 @@ aside {
     align-items: center;
     margin-top:20px;
 }
+
+    
+
+
